# yolo_model

./: .gitignore  README.md  main.py  my_custom_dataset.yaml  pdf_image_extractor.py  pyproject.toml  testing.py  yolo_detector.py
dataset/: train.cache  val.cache
dataset/ddd/: python.ipynb
dataset/train/: 1.txt  10.txt  10_rus.txt  11_rus.txt  12_rus.txt  13.txt  13_rus.txt  15.txt  15_rus.txt  16.txt  16_rus.txt  17.txt  17_rus.txt  18.txt  18_rus.txt  19.txt  19_rus.txt  1_rus.txt  2.txt  20.txt  20_rus.txt  2_rus.txt  3.txt  3_rus.txt  4.txt  4_rus.txt  5.txt  5_rus.txt  6.txt  6_rus.txt  7_rus.txt  8.txt  8_rus.txt  9.txt  9_rus.txt  cb9py05uzn4lrvh5o2c87qo8zxdufire-03.txt  cb9py05uzn4lrvh5o2c87qo8zxdufire-06.txt  cb9py05uzn4lrvh5o2c87qo8zxdufire-08.txt  cb9py05uzn4lrvh5o2c87qo8zxdufire-09.txt  cb9py05uzn4lrvh5o2c87qo8zxdufire-11.txt  (+22 more)
dataset/val/: 14_rus.txt  7.txt  cb9py05uzn4lrvh5o2c87qo8zxdufire-02.txt  математика 4 кл 1 ч (1)-024.txt  математика 4 кл 1 ч (1)-028.txt
dataset_old/: train.cache
dataset_old/train/: cb9py05uzn4lrvh5o2c87qo8zxdufire-04.txt  cb9py05uzn4lrvh5o2c87qo8zxdufire-05.txt  cb9py05uzn4lrvh5o2c87qo8zxdufire-13.txt  cb9py05uzn4lrvh5o2c87qo8zxdufire-15.txt
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml
runs/detect/train4/: results.csv
runs/detect/train5/: args.yaml  results.csv
templates/: index.html
train4/: args.yaml
