[tool.poetry]
name = "pdf-image-extractor"
version = "0.1.0"
description = "Tool for extracting images from PDF files"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyMuPDF = "^1.23.8"
loguru = "^0.7.2"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
pydantic = "^2.5.0"
opencv-python = "^4.8.0"
pillow = "^10.0.0"
numpy = "^1.24.0"
# Optional dependencies
ultralytics = {version = "^8.0.0", optional = true}

[tool.poetry.extras]
yolo = ["ultralytics"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 